Update folder name

--- a/dotnet/src/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson.csproj
+++ b/dotnet/src/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MicroFocus.CafApi.QueryBuilder.Vqll.Builder.Internal\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal.csproj" />
+    <ProjectReference Include="..\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal.csproj" />
     <ProjectReference Include="..\MicroFocus.CafApi.QueryBuilder\MicroFocus.CafApi.QueryBuilder.csproj" />
   </ItemGroup>
 
