--- a/dotnet/tests/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal.Tests/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal.Tests.csproj
+++ b/dotnet/tests/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal.Tests/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal.Tests.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder.Vqll.Builder.Internal\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal.csproj" />
+    <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.Internal.csproj" />
     <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder\MicroFocus.CafApi.QueryBuilder.csproj" />
   </ItemGroup>
 
