--- a/dotnet/tests/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson.Tests/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson.Tests.csproj
+++ b/dotnet/tests/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson.Tests/MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson.Tests.csproj
@@ -39,7 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder.Vqll.Builder.SystemJson\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson.csproj" />
+    <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson\MicroFocus.CafApi.QueryBuilder.Vqll.Builders.SystemJson.csproj" />
     <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder\MicroFocus.CafApi.QueryBuilder.csproj" />
   </ItemGroup>
 
