--- a/dotnet/tests/MicroFocus.CafApi.QueryBuilder.Matcher.Tests/MicroFocus.CafApi.QueryBuilder.Matcher.Tests.csproj
+++ b/dotnet/tests/MicroFocus.CafApi.QueryBuilder.Matcher.Tests/MicroFocus.CafApi.QueryBuilder.Matcher.Tests.csproj
@@ -26,6 +26,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -36,6 +38,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder.Mapper\MicroFocus.CafApi.QueryBuilder.Mapper.csproj" />
+    <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder.Matcher\MicroFocus.CafApi.QueryBuilder.Matcher.csproj" />
+    <ProjectReference Include="..\..\src\MicroFocus.CafApi.QueryBuilder\MicroFocus.CafApi.QueryBuilder.csproj" />
   </ItemGroup>
 
 </Project>
