--- a/dotnet/Directory.Build.props
+++ b/dotnet/Directory.Build.props
@@ -1,6 +1,6 @@
 <!--
 
-    Copyright 2022 Micro Focus or one of its affiliates.
+    Copyright 2022-2023 Open Text.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -19,7 +19,7 @@
   <PropertyGroup>
     <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)artifacts/$(MSBuildProjectName)/obj/</BaseIntermediateOutputPath>
     <BaseOutputPath>$(MSBuildThisFileDirectory)artifacts/$(MSBuildProjectName)/bin/</BaseOutputPath>
-    <Company>Micro Focus</Company>
+    <Company>Open Text</Company>
     <Copyright>$(
         [System.Text.RegularExpressions.Regex]::Match($([System.IO.File]::ReadAllText($(MSBuildThisFileFullPath))), `Copyright.*`)
     )</Copyright>
