--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>com.github.cafapi</groupId>
         <artifactId>caf-common-parent</artifactId>
-        <version>2.4.0-254</version>
+        <version>5.0.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.github.cafapi.querybuilder</groupId>
@@ -64,7 +64,6 @@
 
     <properties>
         <copyrightYear>2023</copyrightYear>
-        <copyrightNotice>Copyright ${project.inceptionYear}-${copyrightYear} Open Text.</copyrightNotice>
     </properties>
 
     <build>
