--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <name>querybuilder-aggregator</name>
     <description>CAF Query Builder</description>
     <url>https://github.com/CAFapi/querybuilder</url>
 
